TP4 :Partie 2: ajout des tests à IPokedexTest en utilisant PokemonComparators